# Coches_segunda_mano_ia

./: .env  .env.sample  .gitattributes  .gitignore  00_coches.ipynb  01_inicio.ipynb  03_prediccion.ipynb  04-Datos.ipynb  05-scraping.ipynb  Cars_Data_6k.csv  Cars_Price_Prediction.ipynb  EDA_SUMMARY_REPORT.md  README.md  eda_analysis.py  eda_used_cars.ipynb  hola.ipynb  main.py  prueba.ipynb  prueba001.ipynb  pyproject.toml
myenv/: pyvenv.cfg
