[project]
name = "pyton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "python-dotenv>=1.1.0",
    "openai>=1.91.0",
    "openai-agents>=0.0.19",
    "openpyxl>=3.1.5",
    "google-generativeai==0.8.5",
    "bs4>=0.0.2",
    "playwright>=1.52.0"
    ]
